--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nixet-landing-page",
+  "name": "Protonlogics-landing-page",
   "version": "0.1.0",
   "homepage": "https://manshatanvi.github.io/protonlogics",
   "private": true,
